--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "lite-server": "^2.3.0"
+    "grunt": "^1.0.3",
+    "grunt-contrib-cssmin": "^3.0.0",
+    "lite-server": "^2.3.0",
+    "time-grunt": "^2.0.0"
   },
   "dependencies": {
     "boostrap": "^2.0.0",
